--- a/css/styles.css
+++ b/css/styles.css
@@ -156,17 +156,24 @@ main {
     max-width: 700px;
     display: var(--display-block);
     justify-content: var(--justify-content-center);
+    text-align: -webkit-center;
 }
 
 .profile__portrait {
     text-align: var(--text-align-center);
+    background-color: #5CDb95;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px #8b8eaf;
+    padding: 20px;
+    margin: 10px; 
+    width: 40%;
 }
 
 .profile__portrait img {
-    height: 300px;
-    width: 225px;
+    height: 17rem;
+    width: 14rem;
     margin: auto;
-    border-radius: 50%;
+    border-radius: 10%;
     display: var(--display-block);
     align-items: center;
 }
@@ -216,7 +223,8 @@ main {
 
 .page-header {
     display: var(--display-flex);
-    width: var(--width-100)
+    width: var(--width-100);
+    box-shadow: 0 1rem 2rem rgb(0 0 0 / 10%);
 }
 
 .page-header__item {
@@ -261,8 +269,18 @@ main {
 .grid__item {
     background-color: var(--secondary-color);
     color: var(--tertiary-color);
-    padding: 1.5rem;
+    padding: 20px;
+    margin: 10px;    
+    border-radius: 11px;
+    box-shadow: 0 1rem 1rem #8b8eaf;
+    margin: 1rem;
 }
+
+.grid__item #api-link {
+  box-shadow: none;
+
+}
+
 
 .grid__item a {
   padding: 0rem;
