--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@
 
 a {
     color: var(--secondary-color);
+    font-weight: bold;
 }
 
 body {
@@ -66,7 +67,7 @@ body {
     /*Sets the font size to 16px*/
     line-height: var(--line-height);
     /* Sets the line-height to 1.6 */
-    background-color: var(--primary-color);
+    background-color: var(--tertiary-color);
     color: var(--tertiary-color);
 }
 
@@ -85,6 +86,11 @@ h2 {
 h3 {
     font-size: 18px;
     font-weight: var(--font-weight-700);
+    margin: 1rem 5rem;
+}
+
+p {
+  font-size: 0.85rem;
 }
 
 .cv {
@@ -142,37 +148,34 @@ button {
 }
 
 main {
-    margin-top: 150px;
+    margin-top: 5rem;
     display: var(--display-flex);
-    justify-content: var(--justify-content-center);
 }
 
 .main-about {
     margin-top: 40px;
     text-align: var(--text-align-center);
+    color: var(--secondary-color);
 }
 
 .profile {
-    max-width: 700px;
+    max-width: 98%;
     display: var(--display-block);
     justify-content: var(--justify-content-center);
-    text-align: -webkit-center;
 }
 
 .profile__portrait {
-    text-align: var(--text-align-center);
-    background-color: #5CDb95;
     border-radius: 11px;
-    box-shadow: 0 3px 10px #8b8eaf;
+    box-shadow: 0 2px 3px #8b8eaf;
     padding: 20px;
     margin: 10px; 
-    width: 40%;
+    margin-left: 5rem;
+    width: 100%;
 }
 
-.profile__portrait img {
+.portrait img {
     height: 17rem;
     width: 14rem;
-    margin: auto;
     border-radius: 10%;
     display: var(--display-block);
     align-items: center;
@@ -182,6 +185,7 @@ main {
 .profile__welcome {
     display: var(--display-block);
     text-align: var(--text-align-center);
+    color: var(--secondary-color);
 }
 
 .enterprise_logo {
@@ -225,12 +229,13 @@ main {
     display: var(--display-flex);
     width: var(--width-100);
     box-shadow: 0 1rem 2rem rgb(0 0 0 / 10%);
+    background-color: var(--primary-color);
 }
 
 .page-header__item {
     flex: var(--flex);
     width: var(--width-25);
-    height: var(--height-150);
+    height: 4.5rem;
     margin: var(--margin-25);
 }
 
@@ -278,6 +283,7 @@ main {
 
 .grid__item #api-link {
   box-shadow: none;
+  font-weight: normal;
 
 }
 
@@ -398,16 +404,6 @@ main {
   width: 17rem;
 }
 
-.thumbnail:hover {
-  position: fixed;
-  top:0rem;
-  bottom:2rem;
-  left:1rem;
-  right:1rem;
-  width:50%;
-  height:50%;
-  display:inline;
-}
 
 #aboutyou, #need, #message {
     width: 90%;
@@ -428,6 +424,7 @@ main {
 .main-work h1 {
     text-align: var(--text-align-center);
     color: var(--secondary-color);
+    margin-top: 5rem;
 }
 
 
@@ -553,7 +550,7 @@ svg {
 @media all and (max-width: 640px) {
     body {
         font-size: 0.5em;
-        width: 640px;
+        width: 100%;
     }
 
     .about__face {
@@ -561,18 +558,67 @@ svg {
         height: 320px;
     }
 
+  .page-header__item {
+    margin: 0rem;
+  }
+
+  .navigation-list {
+    margin-right: 0rem;
+  }
+
+  .navigation-list li {
+    margin-left: 0rem;
+  }
+
+    .navigation-list li a {
+      margin-right: 0.1rem;
+      font-size: 1rem;
+    }
+
     .page-header {
         width: 100%;
     }
 
     .page-header__item {
-        margin-top: var(--mt-25);
+      margin: 0.5rem 0.05rem 1rem 0.05rem;
+      height: 2.5rem;
+    }
+
+    .page-header__item:last-child {
+      text-align: inherit;
+    }
+
+    .profile_about {
+      margin: 0rem 2.5rem;
+    }
+
+    .profile__welcome h3 {
+      margin: 1rem 2rem;
+    }
+
+    td, .profile_about ul li {
+      font-size: 0.75rem;
+    }
+
+    .profile_about h3 {
+      margin: 1rem 2rem;
+    }
+
+    .cv a {
+      width: 10rem;
+      font-size: 0.75rem;
+      height: 2.5rem;
+    }
+
+    .work__link {
+      margin-top: 2rem;
+      font-size: 0.75rem;
     }
 
     .grid {
       width: 30rem;
-      margin: 0rem 0rem 0rem 5rem;
-      grid-template-rows: 67rem 59rem;
+      margin: 0rem 1rem;
+      grid-template-rows: 73rem 69rem;
     }
 
     .grid h2 {
@@ -581,6 +627,19 @@ svg {
 
     .social-media p { 
       font-size: 1rem;
+    }
+
+    .main-contact h1 {
+      font-size: 1.25rem;
+      margin: 2rem 1rem 0rem 1rem;
+    }
+
+    .contact__item {
+      width: 94%;
+    }
+
+    .contact__item h2 {
+      font-size: 1.25rem;
     }
 
     #project-one .project { 
@@ -592,7 +651,7 @@ svg {
     }   
     
     #project-three .project { 
-      margin-bottom: 2rem;
+      height: 19%;
     }   
     
     #project-four .project { 
@@ -600,7 +659,7 @@ svg {
     }   
     
     #project-five .project { 
-      margin-bottom: 2rem;
+      margin-bottom: 6rem;
     }   
 
     #project-five p {
@@ -648,12 +707,12 @@ svg {
 
 
     #contact__item-three {
-        height: 150px;
+        height: 8rem;
     }
 
     #contact__item-four {
-        height: 275px;
-        margin-top: 4rem;
+        height: 14rem;
+        margin-top: 2rem;
     }
 
     /*svg {
@@ -661,8 +720,15 @@ svg {
     }*/
 }
 
+@media all and (min-width: 320px) and (max-width: 425px) {
 
-@media all and (min-width: 640px) and (max-width: 768px) {
+}
+
+@media all and (min-width: 375px) and (max-width: 425px) {
+
+}
+
+@media all and (min-width: 425px) and (max-width: 768px) {
 
 }
 
@@ -675,6 +741,62 @@ svg {
         grid-template-rows: 365px 0px;
     }
 
+    p {
+      font-size: 0.9rem;
+    }
+
+    #project-one {
+      height: 54rem;
+    }
+
+    #project-one .project a.github__button {
+      margin-top: 0.5rem;
+    }
+
+    #project-two {
+      height: 54rem;
+    }
+
+    #project-two #bulleted-list {
+      margin-bottom: 5rem;
+    }
+
+    #project-three {
+      margin-top: 3rem;
+      height: 59rem;
+    }
+
+    #project-four {
+      margin-top: 3rem;
+      height: 59rem;
+    }
+
+    #project-five {
+      margin-top: 3rem;
+      height: 59rem;
+    }
+
+    #project-five .buttons {
+      margin-top: 4rem;
+    }
+
+    #project-five .project {
+      height: 10rem;
+    }
+
+    #project-five .project a {
+      width: 75%;
+    }
+
+    #project-six {
+      margin-top: 3rem;
+      height: 59rem;
+    }
+
+    #project-six {
+      margin-bottom: 7rem;
+    }
+
     .about__face {
         width: 210px;
         height: 280px;
@@ -683,10 +805,12 @@ svg {
 
     .navigation-list {
         padding-left: 0px;
+        font-size: 1rem;
     }
 
     body {
-        margin: 0rem 1rem 0rem 1rem;
+        margin: 0rem;
+        max-width: 100%;
     }
 
     .page-header {
@@ -699,11 +823,14 @@ svg {
         margin-right: 35px;
     }
 
+    .profile_about {
+      margin: 0rem 6rem;
+    }
     
     .grid {
-        grid-template-columns: 22.5rem 22.5rem;
+        grid-template-columns: 1fr 1fr;
         display: var(--display-grid);
-        margin: 0rem 0rem 0rem 0rem;
+        margin: 0rem 1rem;
         grid-template-rows: 53rem 59rem;
     }
 
@@ -711,11 +838,12 @@ svg {
     .contact__grid {
         grid-template-columns: var(--grid-template-columns);
         display: var(--display-grid);
-        margin: 0px 85px 0rem 0px;
+        margin-left: 10rem;
         grid-template-columns: 440px 0px;
         grid-template-rows: 2rem 0px;
         grid-gap: var(--grid-gap);
         max-width: 665px;
+        justify-content: center;
     }
 
     #contact__item-one {
@@ -733,26 +861,31 @@ svg {
     #contact__item-three {
         height: var(--height-150);
         margin-top: 0rem;
-        width: 54rem;
+        width: 42rem;
+        justify-self: center;
     }
 
     #contact__item-four {
         height: 200px;
-        margin-top: 185px;
-        width: 54rem;
+        margin-top: 8rem;
+        width: 42rem;
+        justify-self: center;
     }
 
     .main-contact h1 {
         font-size: 25px;
         color: var(--secondary-color);
+        margin-top: 3rem;
     }
 
     .navigation-list li {
         font-size: 1.25em;
     }
     
+
     #project-one #bulleted-list, #project-one .project {
-      margin-bottom: 3rem;
+      margin-bottom: 2rem;
+      height: 10rem;
     }
 
     #project-two .project img {
@@ -760,26 +893,27 @@ svg {
     }
 
     #project-two .project {
-      height: 18rem;
+      height: 11.5rem;
       margin-bottom: 2rem;
-      width: 90%;
+      width: 100%;
+      margin-top: 3rem;
     }
 
     #project-three #bulleted-list {
-      margin-bottom: 6.5rem;
+      margin-bottom: 4.5rem;
     }
 
     #project-three .project {
-      margin-bottom: 2.5rem;
-      height: 27%;
+      height: 21%;
     }
 
-    #project-four .project {
-      margin-bottom: 2.5rem;
-    }
 
     #project-four #bulleted-list {
       margin-bottom: 2rem;
+    }
+
+    #project-four .project {
+      height: 11.5rem;
     }
 
     #project-five p {
@@ -787,12 +921,10 @@ svg {
   }
 
     #project-five #bulleted-list {
-      margin-bottom: 3.5rem;
+      margin-bottom: 6.5rem;
   }
 
-  #project-five .project {
-    margin-bottom: 2.5rem;
-  }
+
 
   #project-six #bulleted-list {
     margin-bottom: 2rem;
@@ -801,7 +933,8 @@ svg {
 
 #project-six .project {
   height: 12rem;
-  width: 20rem;
+  width: 100%;
+  margin-bottom: 3rem;
 }
 
 #contact-social {
@@ -819,8 +952,6 @@ svg {
     body {
         font-size: 1em;
         width: 100%;
-        margin-left: 1em;
-        margin-top: 20px;
     }
 
     .grid, .contact__grid {
@@ -862,8 +993,20 @@ svg {
     margin-bottom: 2rem;
   }
 
+  #project-four .project {
+    margin-bottom: 4rem;
+  }
+
   #project-five #bulleted-list {
     margin-bottom: 12.5rem;
+  }
+
+  #project-five .project a {
+    height: 16rem;
+  }
+
+  #project-five .buttons {
+    margin-top: 3rem;
   }
 
     .contact__item {
